import { ImagedEntity } from "../../../base/stage/entity/ImagedEntity";

/**
 * Only image entity
 * - Renders image only
 * @extends {ImagedEntity}
 * @classdesc Only image entity to render image only
 */
export class OnlyImageEntity extends ImagedEntity {
}
