/**
 * Tile object
 * - Object present on the stage that has coordinate and size
 * - Manages image
 * - It can be collided because it has material and collider
 * - It is fixed and no change will occur
 * - ### Decides the tile to be displayed by the ID and position, using the sprite indicating the stage tiles
 * @extends {ImmutableEntity}
 * @classdesc Tile object to decide the tile to be displayed by the IDand position, using the sprite indecating the stage tiles
 */
class TileObject extends ImmutableEntity { // eslint-disable-line  no-unused-vars
}
