@startuml ParserTile

package under {
    package extend {
        package ex_stage {
            package ex_parser {
                class TileBuilder {
                    #makeImage(image) : GameImage
                    #tryReplace(deploy, json, data) : JSON
                    #tryOverride(deploy,json,init) : JSON
                    #makeCollider(collider) : Collider
                    #makeAABB(collider) : AABB
                    #makeMaterial(material) : Material
                    #makeTileBase(delpoy, tile) : Entity
                    #buildBase(base,deploy,json)
                    #buildImage(base,deploy,json)
                    #buildPhysical(base,deploy,json)
                    +build(deploy,json) : Entity <<override>>
                }
            }
        }
    }
}

package under {
    package base {
        package stage {
            package entity {
                abstract Entity
                abstract ImagedEntity
                abstract InfluentialEntity
            }
            package parser {
                abstract EntityBuilder
                abstract ImageBuilder
            }
        }
    }
    package extend {
        package ex_stage {
            package ex_physics {
                package ex_collider {
                    class CircleCollider
                    class RectangleCollider
                    class RoundRectangleCollider
                    class SimpleAABB
                    class DirectionalAABB
                }
                package ex_material {
                    class ImmutableMaterial
                }
                package ex_entity {
                    class TileObject
                    class OnlyImageEntity
                }
            }
        }

    }
}

TileBuilder ..> RectangleCollider : Generate
TileBuilder ..> CircleCollider : Generate
TileBuilder ..> RoundRectangleCollider : Generate
TileBuilder ..> SimpleAABB : Generate
TileBuilder ..> DirectionalAABB : Generate
TileBuilder ..> ImmutableMaterial : Generate
TileBuilder ..> TileObject : Generate
TileBuilder ..> OnlyImageEntity : Generate
Entity <.. TileBuilder : Set
ImagedEntity <.. TileBuilder : Set
InfluentialEntity <.. TileBuilder : Set
ImageBuilder <.. TileBuilder : Build

EntityBuilder <|.. TileBuilder

@enduml
